welcome.lessons.welcome.methods.picture.PatternPicture.scala.error
PatternPicture:10: error: identifier expected but ')' found.
def faireDiagoB(c:Color,){setCouleurBrosse(c);marquerSol();gauche();avance();gauche();avance();marquerSol();gauche();avance();gauche()}
                        ^PatternPicture:21: error: ':' expected but '}' found.
}
^