welcome.lessons.welcome.methods.picture.PatternPicture.scala.code
override def run() {
  for(j<- 0 to 1){
    for(i<- 0 to 1){faireMotif();avance();avance()}
    reposition()
  }
}

def marquerSol(){baisseBrosse();leveBrosse()}

def faireDiagoB(c:Color,){setCouleurBrosse(c);marquerSol();gauche();avance();gauche();avance();marquerSol();gauche();avance();gauche()}

def faireDiagoH(c:Color){setCouleurBrosse(c);marquerSol();gauche();avance();gauche();avance();marquerSol();gauche();avance();gauche()}

def faireMotif(){faireDiago(Color.RED);avance();avance();avance();gauche();faireDiago();avance();avance();avance();gauche();faireDiago(Color.BLUE);avance();avance();avance();gauche():faireDiago(Color.GREEN);avance();avance();avance();gauche();faireDiago(Color.YELLOW)}

def reposition(){avance();gauche();avance();avance();avance();droite()}


